fix header visibility

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@ body.lock {
 }
 
 .app {
+  overflow-x: hidden;
   margin: 0 auto;
   padding: 80px 30px 30px;
   width: 100%;
