--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -41,7 +41,6 @@ aside {
 
 html,
 body {
-  overflow-x: hidden;
   font-family: Nunito, sans-serif;
   font-style: normal;
   height: 100%;
